<resources>
    <string name="app_name">魔法屋</string>
    <string name="name">姓名</string>
    <string name="phone">手机号码</string>
    <string name="photo">拍照</string>
    <string name="face">检测到人脸数：</string>
    <string name="register">注册</string>
    <string name="detect_no_face">未检测到人脸</string>
    <string name="detect_face_in">把脸移入框内</string>
    <string name="detect_zoom_in">手机拿近一点</string>
    <string name="detect_zoom_out">手机拿远一点</string>
    <string name="detect_head_up">建议略微抬头</string>
    <string name="detect_head_down">建议略微低头</string>
    <string name="detect_head_left">建议略微向左转头</string>
    <string name="detect_head_right">建议略微向右转头</string>
    <string name="detect_occ_face">脸部有遮挡</string>
    <string name="detect_low_light">光线再亮些</string>
    <string name="detect_keep">请保持不动</string>
    <string name="detect_standard">请正对手机</string>
    <string name="detect_timeout">检测超时</string>
    <string name="liveness_eye">眨眨眼</string>
    <string name="liveness_eye_left">请眨眨左边眼睛</string>
    <string name="liveness_eye_right">请眨眨右边眼睛</string>
    <string name="liveness_mouth">张张嘴</string>
    <string name="liveness_head_left">向左缓慢转头</string>
    <string name="liveness_head_right">向右缓慢转头</string>
    <string name="liveness_head_left_right">摇摇头</string>
    <string name="liveness_head_up">缓慢抬头</string>
    <string name="liveness_head_down">缓慢低头</string>
    <string name="liveness_good">非常好</string>
    <string name="faceNone">未检测到人脸</string>
    <string name="app">魔法屋MAGICH</string>
    <string name="photoOK">拍照成功</string>
    <string name="photoMore">图片中人脸过多</string>
    <string name="cameraError">相机不存在</string>
    <string name="photoTip">拍照时请将人脸移入框内</string>
    <string name="exit">退出软件</string>
    <string name="setting">运维界面</string>
    <string name="delete">删除</string>
    <string name="token">更新token</string>
    <string name="closeDoor">关门</string>
    <string name="openDoor">关门</string>
</resources>
