<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.szxmrt.app.facerecognitionsystem.activity.Camera1RecognitionActivity">
    <com.szxmrt.app.facerecognitionsystem.custom.CameraTextureView
        android:id="@+id/PreviewTexture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="170dp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
        android:id="@+id/faceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/PreviewTexture"
        android:contentDescription="@string/face"/>
    <com.szxmrt.app.facerecognitionsystem.widget.FaceDetectRoundView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/camera1_faceNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/PreviewTexture"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="100dp"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/faceNone"/>
    <com.szxmrt.app.facerecognitionsystem.widget.MyToolbar
        android:id="@+id/recognition_toolbar"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp" />
    <com.szxmrt.app.facerecognitionsystem.widget.MyTextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/recognition_title"
        app:layout_constraintTop_toTopOf="@+id/recognition_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="25dp"
        android:textSize="30sp"
        android:text="@string/register"/>
    <com.szxmrt.app.facerecognitionsystem.widget.MyTextView
        android:id="@+id/recognition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recognition_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/app"
        android:textSize="30sp"
        android:textColor="@color/a"/>
</android.support.constraint.ConstraintLayout>
