<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.Camera1RecognitionActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.szxmrt.app.facerecognitionsystem.custom.CameraTextureView
        android:id="@+id/registerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="170dp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <com.szxmrt.app.facerecognitionsystem.widget.FaceDetectRoundView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <com.szxmrt.app.facerecognitionsystem.widget.MyToolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"/>
    <com.szxmrt.app.facerecognitionsystem.widget.MyTextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/app"
        android:textSize="30sp"
        android:textColor="@color/a"/>
    <ImageView
        android:id="@+id/register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/register_title"
        app:layout_constraintBottom_toBottomOf="@id/register_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:src="@mipmap/back"/>
    <ImageView
        android:id="@+id/register_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/register_title"
        app:layout_constraintBottom_toBottomOf="@id/register_title"
        android:layout_marginEnd="30dp"
        android:src="@mipmap/setting"/>
    <TextView
        android:id="@+id/register_faceTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/registerView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="100dp"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/photoTip"/>
    <ImageView
        android:id="@+id/face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registerView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:textSize="30sp"
        android:text="@string/name"/>
    <EditText
        android:id="@+id/register_Name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/name"
        app:layout_constraintLeft_toRightOf="@id/name"
        android:layout_marginStart="20dp"
        android:background="@null"
        android:gravity="center"
        android:textSize="30sp"
        android:hint="@string/name"/>
    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/name"
        app:layout_constraintLeft_toRightOf="@id/register_Name"
        android:layout_alignBottom="@id/name"
        android:layout_marginStart="60dp"
        android:textSize="30sp"
        android:text="@string/phone"/>
    <EditText
        android:id="@+id/register_Phone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/name"
        app:layout_constraintLeft_toRightOf="@id/phone"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:background="@null"
        android:inputType="phone"
        android:textSize="30sp"
        android:hint="@string/phone"/>

    <Button
        android:id="@+id/register_Photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"
        app:layout_constraintLeft_toRightOf="@id/register_Phone"
        android:layout_marginStart="60dp"
        android:text="@string/photo"/>
    <Button
        android:id="@+id/register_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"
        app:layout_constraintLeft_toRightOf="@id/register_Photo"
        android:layout_marginStart="20dp"
        android:text="@string/register"/>
</android.support.constraint.ConstraintLayout>
